# highpermeshes-dsl

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_gnu.yml  build_ubuntu_gnu.yml  build_ubunut_gnu.yml
CI/github/: install_gcc8.sh  install_googletest.sh  install_metis.sh  install_opencl.sh
cmake/: FindMETIS.cmake  HighPerMeshesConfig.cmake.in
examples/: CMakeLists.txt  Experiments.cpp  MinimalWorkingExample.cpp  OpenCLMemCopyExample.cpp  WriteLoopExample.cpp  clDispatcher.cpp  memcopy.cl
examples/MIDG2_DSL/: RKCoeff.hpp  config.cfg  data3dN03.hpp  mainUnfusedKernels.cpp
examples/cg-experiments/: BandwidthForwardEuler.cpp  BandwidthRungeKutta.cpp  BandwidthVolume.cpp  CMakeLists.txt  ExperimentForwardEuler.cpp  ExperimentInitialization.cpp  ExperimentRKHandWrittenOCL.cpp  ExperimentRKStripped.cpp  ExperimentRungeKutta.cpp  ExperimentVolume.cpp  Experiments.cpp  ForwardEuler.cl  ForwardEuler.cpp  ForwardEuler.hpp  ForwardEulerOCL.hpp  ForwardEulerSimple.cl  ForwardEulerStripped.hpp  ForwardEulerVector.cl  ForwardEulerVector.cpp  RungeKutta.cl  RungeKutta.cpp  RungeKutta.hpp  RungeKuttaHandWritten.cl  RungeKuttaOCL.hpp  RungeKuttaStripped.hpp  RungeKuttaVolume.cl  RungeKuttaVolume.hpp  RungeKuttaVolumeOCL.hpp  SpeedupForwardEuler.cpp  SpeedupForwardEulerVector.cpp  SpeedupMemcopy.cpp  SpeedupRungeKutta.cpp  SpeedupRungeKuttaHandWrittenOCL.cpp  SpeedupRungeKuttaStripped.cpp  SpeedupVolume.cpp  Volume.cl  Volume.cpp  Volume.hpp  VolumeOCL.hpp  help.hpp  (+5 more)
include/: HighPerMeshes.hpp
include/HighPerMeshes/: Auxiliary.hpp  Common.hpp  DRTS.hpp  DSL.hpp  Misc.hpp
include/HighPerMeshes/auxiliary/: ArrayOperations.hpp  Atomic.hpp  CmdLineParser.hpp  ConfigParser.hpp  ConstexprFor.hpp  ConstexprIfElse.hpp  Convert.hpp  Environment.hpp  HelperFunctions.hpp  Math.hpp  MeasureTime.hpp  Reader.hpp  TupleOperations.hpp
include/HighPerMeshes/common/: ConstexprArray.hpp  DataTypes.hpp  IndexSequence.hpp  Iterator.hpp  Matrix.hpp  Method.hpp  TypeTraits.hpp  Vec.hpp
include/HighPerMeshes/drts/: DataFlow.hpp  GetBuffer.hpp  GetDistributedBuffer.hpp  Runtime.hpp  UsingOpenCL.hpp
include/HighPerMeshes/drts/data_flow/: DataDependencyMaps.hpp  Graph.hpp
include/HighPerMeshes/dsl/: Buffers.hpp  DataAccess.hpp  Dispatchers.hpp  Entities.hpp  LoopTypes.hpp  Meshes.hpp  MetaProgramming.hpp
include/HighPerMeshes/dsl/buffers/: Buffer.hpp  BufferBase.hpp  DistributedBuffer.hpp  LocalBuffer.hpp
include/HighPerMeshes/dsl/data_access/: AccessDefinition.hpp  AccessDefinitionHelpers.hpp  AccessMode.hpp  AccessPatterns.hpp  Dof.hpp  DofPartition.hpp  DofRequests.hpp  LocalView.hpp  LocalViewPlain.h  LocalViewPlain.hpp
include/HighPerMeshes/dsl/dispatchers/: Dispatcher.hpp  OpenCLDispatcher.hpp  SequentialDispatcher.hpp
include/HighPerMeshes/dsl/entities/: Geometry.hpp  Simplex.hpp  Topology.hpp
include/HighPerMeshes/dsl/loop_types/: ExecutionPolicy.hpp  MeshLoop.hpp
include/HighPerMeshes/dsl/loop_types/free_loops/: ForEach.hpp  ForEachEntity.hpp  ForEachSubEntity.hpp
include/HighPerMeshes/dsl/loop_types/loop_implementations/: DefaultLoopImplementations.hpp  OpenMPLoops.hpp
include/HighPerMeshes/dsl/meshes/: Mesh.hpp  PartitionedMesh.hpp  Partitioner.hpp  Range.hpp
include/HighPerMeshes/dsl/meta_programming/: UtilTraits.hpp
include/HighPerMeshes/dsl/meta_programming/util/: IsAccessDefinitions.hpp  IsExpressionSupported.hpp  IsTemplateSpecialization.hpp  TupleTypeTraits.hpp
include/HighPerMeshes/misc/: DG.hpp
tests/: CMakeLists.txt  Tests.cpp
tests/drts/data_flow/: DataDependencyMaps.cpp  GraphTest.cpp
tests/dsl/data_access/: GlobalDof.cpp
tests/dsl/dispatchers/: DistributedDispatcher.cpp  TimeStep.cpp
tests/dsl/loop_types/: AccessDefinitionHelpers.cpp
tests/dsl/mesh/: PartitionedMesh.cpp
tests/dsl/tmp/util/: IsAccessDefinitionTest.cpp  IsDataAccessesTest.cpp  IsExpressionSupportedTest.cpp  IsTemplateSpecialization.hpp  TupleTypeTraitsTest.cpp
tests/util/: GaspiSingleton.hpp  Grid.hpp  UnitCube.hpp
utility/output/: CMakeLists.txt  WriteLoop.hpp  parser.cpp
utility/output/include/: entry.hpp  entry_parser.hpp  read_files.hpp  read_paths.hpp  to_step_map.hpp  write_entries.hpp
utility/output/tests/: CMakeLists.txt  tests.cpp
